<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addStory.AddStoryActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_location"
        style="@style/TextSetting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:buttonTint="@color/info1"
        android:text="@string/enable_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_image"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_location" />

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_location" />

    <com.example.storymapps.ui.customView.CustomButton
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/info1"
        android:text="@string/camera"
        android:fontFamily="@font/nunitosans_bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />

    <com.example.storymapps.ui.customView.CustomButton
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/gallery"
        style="@style/TextButtonSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/info1"
            android:gravity="top"
            android:hint="@string/desc"
            style="@style/HintDesc"
            android:padding="16dp"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.storymapps.ui.customView.CustomButton
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="60dp"
        android:paddingVertical="16dp"
        android:text="@string/upload"
        style="@style/TextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>