<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <TextView
        android:id="@+id/tv_change_language"
        style="@style/TextSetting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        app:layout_constraintBottom_toTopOf="@+id/btn_language"
        app:layout_constraintEnd_toEndOf="@+id/btn_language"
        app:layout_constraintStart_toStartOf="@+id/btn_language"/>

    <Button
        android:id="@+id/btn_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/info1"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/change_language_button"
        style="@style/TextSetting1"
        app:layout_constraintBottom_toTopOf="@+id/tv_change_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_change_theme"
        style="@style/TextSetting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_theme"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_theme"
        app:layout_constraintStart_toStartOf="@+id/btn_language"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        style="@style/TextSetting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_language"
        app:layout_constraintStart_toEndOf="@id/tv_change_theme"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>